--- a/Views/Admin/UserRegister.cshtml
+++ b/Views/Admin/UserRegister.cshtml
@@ -19,17 +19,15 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Department"></label>
-                <input asp-for="Department" class="form-control" />
-                <span asp-validation-for="Department" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                <label asp-for="Manager"></label>
-                <input asp-for="Manager" class="form-control" />
-                <span asp-validation-for="Manager" class="text-danger"></span>
-            </div>
+            <label asp-for="Department"></label>
+            <select asp-for="Department" class="form-control" id="sel1">
+                @foreach (var item in ViewBag.departments)
+                 {
+            <option>@item.DepartmanName</option>
+                    }
+            </select>
+            <span asp-validation-for="Department" class="text-danger"></span>
+            <br />
 
             <div class="form-group">
                 <label asp-for="CreateDate"></label>
