--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -16,7 +16,7 @@
             @if (User.IsInRole("DepartmentManager"))
     {
             <li>
-                <input type="button" class="btn btn-link navbar-btn navbar-link" value="Departman Islemleri" onclick="window.location.href='@Url.Action("Index","Holiday")'" />
+                <input type="button" class="btn btn-link navbar-btn navbar-link" value="Departman Islemleri" onclick="window.location.href='@Url.Action("Index","Department")'" />
             </li>
 
 }
