Departmen Add User %50

--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Departman Üyeleri</h2>
 
 <div class="container">
-    <a class="btn btn-default" href="@Url.Action("HolidayRegister","Holiday")" style="float:right;">İzin Olustur</a>
+    <a class="btn btn-default" href="@Url.Action("AddUser","Department",new { id=1007 })" style="float:right;">İzin Olustur</a>
     <table class="table table-bordered" id="example">
         <thead>
             <tr>
