Department system Ok

--- a/Views/Admin/UserRegister.cshtml
+++ b/Views/Admin/UserRegister.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
-            <label asp-for="Department"></label>
+            @*<label asp-for="Department"></label>
             <select asp-for="Department" class="form-control" id="sel1">
                 @foreach (var item in ViewBag.departments)
                  {
             <option>@item.DepartmanName</option>
                     }
             </select>
-            <span asp-validation-for="Department" class="text-danger"></span>
+            <span asp-validation-for="Department" class="text-danger"></span>*@
             <br />
 
             <div class="form-group">
