we started to create holiday status system

--- a/Views/Holiday/Index.cshtml
+++ b/Views/Holiday/Index.cshtml
@@ -16,6 +16,7 @@
                 <th>İzin Bitiş</th>
                 <th>İzin Oluşturulan Tarih</th>
                 <th>İzin Süresi</th>
+                <th>İzin Durumu</th>
                 <th>Yazdır</th>
                 <th>Pdf</th>
             </tr>
@@ -42,6 +43,7 @@
                 { "data": "endDateString" },
                 { "data": "createDateString" },
                 { "data": "holidayTime" },  
+                { "data": "status"},
                 {
                   "title": "Yazdır",
                   "data": "id",
