--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -15,10 +15,20 @@
 
             @if (User.IsInRole("DepartmentManager"))
 
+
     {
-            <li>
-                <input type="button" class="btn btn-link navbar-btn navbar-link" value="Departman Islemleri" onclick="window.location.href='@Url.Action("Index","Department")'" />
-            </li>
+
+        <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                Departman Islemleri
+                <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+                <li><a asp-area="" asp-controller="Department" asp-action="Index">Departman Yonetimi</a></li>
+                <li><a asp-area="" asp-controller="Department" asp-action="PendingHolidays">Onay Bekleyen Izinler</a></li>
+            </ul>
+        </li>
+
 
 }
 
