--- a/Views/Holiday/MyDeniedHolidays.cshtml
+++ b/Views/Holiday/MyDeniedHolidays.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewData["Title"] = "Kullanıcı İzinleri";
+    ViewData["Title"] = "MyDeniedHolidays";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Kullanıcı İzinleri</h2>
+<h3>Onaylanmamış Izinler</h3>
 
 <div class="container">
     <table class="table table-bordered" id="example">
@@ -16,6 +16,7 @@
                 <th>İzin Oluşturulan Tarih</th>
                 <th>İzin Süresi</th>
                 <th>İzin Durumu</th>
+
             </tr>
         </thead>
         <tbody></tbody>
@@ -25,7 +26,7 @@
     $(document).ready(function () {
         $('#example').DataTable({
             "ajax": {
-                "url": "GetsHoliday",
+                "url": "GetsMyDeniedHolidays",
                 "dataSrc": ""
             },
             "columns": [
@@ -33,12 +34,10 @@
                 { "data": "startDateString" },
                 { "data": "endDateString" },
                 { "data": "createDateString" },
-                { "data": "holidayTime" },       
-                { "data": "status" },
-                
-                
+                { "data": "holidayTime" },
+                { "data": "status"},
             ]
         });
     });
-   
+
 </script> 
